--- a/IntunePackagingTool.csproj
+++ b/IntunePackagingTool.csproj
@@ -11,10 +11,21 @@
 		<RuntimeIdentifier>win-x64</RuntimeIdentifier>
 	</PropertyGroup>
 	<ItemGroup>
-		<Folder Include="Services\" />
+	  <None Remove="Scripts\RemoteDeployment.ps1" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Content Include="Scripts\RemoteDeployment.ps1">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+	<ItemGroup>
 		<Folder Include="Utilities\" />
 		<Folder Include="Views\" />
-		<Folder Include="Dialogs\" />
 		<Folder Include="Dialogs\WizardSteps\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Page Update="ApplicationDetailView.xaml">
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </Page>
 	</ItemGroup>
 </Project>
